www/styles/main.css
* {
    -webkit-box-sizing: border-box;
    boz-sizing: border-box;
    padding: 0;
    margin: 0;
}


body {
    background-color: black;
}

@media screen and (min-width:480px) {
    body {
        margin: 0 auto;
        max-width: 320px;
        max-height: 600px;
        margin-top: 30px;
    }
}

@font-face{
    font-family: 'WebEgyptian';
    src: url('EgyptianHeadline-Light.woff') format('woff');
}


.guardian-logo {
    width: 100px;
    margin: 15px 5px;
}

.x-inner {
    font-family: WebEgyptian, serif;
}

.x-inner p {
    margin: 0 0 12px 0;
}

.sublink {
    font-size: 15px;
    display: block;
    color: blue;
}


/* Start menu */
.start-menu {
    font-family: WebEgyptian, serif;
}
.start-menu .thumb {
    width: 50px;
    float: left;
    margin-right: 8px;
    margin-bottom: 25px;
}

.toolbar {
    background-image: none;
}


/* Logo button */
.gu-logo-button {
    /*background: transparent url(../images/guardian-logo.png) no-repeat 0 0 !important;
    background-size: 140px 25px;*/
    border: 0 !important;
    background-image: none !important;
    background-color: transparent !important;
    margin: 0; !important;
    padding: 0 !important;
}
.gu-logo-button .guardian-logo {
    margin-top: 10px;
}


/* Card styles */
.card .x-innerhtml {
    padding: 8px 32px 8px 8px;
}

.card {
    color: #333;
    font-family: WebEgyptian, serif;
}

.card h1 {
    border-top: 4px solid #4bc6df;
    color: #005689;
    font-size: 24px;
    font-weight: 500;
    padding: 2px 0;
}


/* Grid image */
.grid-container {
    background-color: #000;
}

.grid__item {
    float: left;
    width: 33.33%;
    height: 160px;
    overflow: hidden;
}

.grid__img {
    width: 100%;
}


.story-title {
    padding: 0;
    font-family: WebEgyptian,
    font-size: 30px;
    text-align: center;
    background: rgba(255,255,255,0.8);
    padding: 10px 0;
}

.story-title h1 {
    font-size: 30px;
    color: #214583;
}


.image-type .x-innerhtml {
    padding: 8px;
    font-size: 20px;
}

.image-detail .x-innerhtml {
    background: #000;
    color: #fff;
    padding: 8px;
    font-size: 20px;
}

.arrow {
    font-size: 14px;
    margin-left: 8px;
}


/* Image cards */
.x-img-background {
    background: #000;
}

/* Play button */
.play-button,
.play-button.x-button-pressing {
    background: rgba(255,255,255,0.95) url(../images/blue-arrow.svg) no-repeat 50% 50%;
    background-size: 60px;
}
.play-button.x-button-pressing {
    background-color: rgba(200,200,200,0.95);
}

/* Carousel colour */
.x-carousel-indicator > * {
    background-color: #214583 !important;
    opacity: 0.4;
}
.x-carousel-indicator > .x-carousel-indicator-active { opacity: 1 }

.x-list .x-list-item.x-list-item-tpl .x-innerhtml {
    min-height: 60px;
}

